removed so that it is not crawled

--- a/index.css
+++ b/index.css
@@ -1,673 +1,25 @@
-/*CSS CREATED BY SAMMY ROBENS-PARADISE
-    CURRENT AS OF: 2018-06-29
-*/
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-html,
-body {
-    margin: 0px;
-    padding: 0px !important;
-    overflow-x: hidden !important;
-    font-family: 'Montserrat', sans-serif !important;
+.view-portfolio {
+  text-align: center;
+  margin: 20%;
+  display: block;
+  border-radius: 8px;
+  background: #3f46f3;
+  color: #e5e5e5;
+  padding: 20px;
+  font-size: 18px;
+  text-decoration: none;
 }
-
-body {
-    overflow-y: hidden;
+.view-portfolio:hover,
+.view-portfolio:active,
+.view-portfolio:focus {
+  background: #2b2b2b;
+  text-decoration: none;
+  color: #e5e5e5;
 }
-
-a {
-    text-decoration: none !important;
-}
-
-.navigation-padding {
-    fill: none;
-    height: 4rem;
-    width: 100%;
-}
-
-h1 {
-    text-align: center;
-    color: #000000 !important;
-}
-
-.navbar-brand {
-    color: #333 !important;
-}
-
-.sammy-landing-image{
-    height: 30rem;
-    width: auto;
-    margin: 0 auto;
-    display: inline-block;
-}
-.landing-image{
-    text-align: center;
-}
-
-@media screen and (max-width: 1100px) {
-    .landing-image {
-        height: 24rem;
-    }
-    .sammy-landing-image{
-        height: 24rem;
-    }
-}
-
-@media screen and (max-width: 880px) {
-    .landing-image {
-        height: 18rem;
-    }
-    .sammy-landing-image{
-        height: 18rem;
-    }
-}
-
-.landing-page-content {
-    text-align: center;
-    margin-top: 1rem;
-}
-
-.find-out-what-working-on {
-    text-decoration: underline;
-    text-decoration-color: #32228a;
-    margin-bottom: 4rem;
-}
-
-@media screen and (min-width: 781px) {
-    .center-content {
-        text-align: center;
-        margin-left: 15px !important;
-        margin-top: 10px;
-
-    }
-}
-
-@media screen and (max-width: 780px) {
-    .find-out-what-working-on {
-        margin-top: 6rem;
-        margin-bottom: 4rem;
-        opacity: 0;
-    }
-
-    .spacer {
-        height: 4rem;
-        width: 100%;
-    }
-
-    .center-content {
-        text-align: center;
-        margin-left: 15px !important;
-
-    }
-
-    .landing-image {
-        text-align: center;
-    }
-
-    .col-md-6 {
-        padding-right: 0px !important;
-    }
-}
-
-@media screen and (max-width: 667px) {
-    .spacer {
-        height: 12rem;
-    }
-}
-
-@media screen and (max-width: 568px) {
-    .container {
-        margin-left: 15px !important;
-    }
-}
-
-.button-des {
-    background-color: #32228a;
-    border: none;
-    color: white;
-    width: 20rem;
-    height: 3rem;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    margin: 4px 2px;
-    border-radius: 8px;
-    cursor: pointer;
-}
-
-.button-des:hover {
-    background-color: #7164b9;
-}
-
-#href-a-to-sammy {
-    color: #fff !important;
-    text-decoration: none !important;
-    /* no underline */
-}
-
-#href-a-to-resume-dwld {
-    color: #fff !important;
-    text-decoration: none !important;
-    /* no underline */
-}
-
-.col-sm-12 {
-    padding-right: 0 !important;
-    padding-left: 0 !important;
-}
-
-.row {
-    margin-right: 0 !important;
-}
-
-.landing-text {
-
-    top: 0rem;
-    -webkit-background-clip: text;
-    background-clip: text;
-    white-space: nowrap;
-    overflow: hidden;
-    margin: 0 auto;
-    border-right: 2px solid rgba(0, 0, 0, 0.75);
-    position: relative;
-    width: 13em;
-
-}
-
-stringname:hover {
-    color: grey;
-    cursor: none;
-}
-
-.landing-text-sub {
-    top: 10rem;
-    background-clip: text;
-    -webkit-background-clip: text;
-}
-
-.anim-typewriter {
-    animation: typewriter 4s steps(44) 1s 1 normal both,
-        blinkTextCursor 500ms steps(44) infinite normal;
-}
-
-@keyframes typewriter {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 13em;
-    }
-}
-
-@keyframes blinkTextCursor {
-    from {
-        border-right-color: rgba(0, 0, 0, 0, 0.75);
-    }
-
-    to {
-        border-right-color: #fff;
-    }
-}
-
-.nav-link:hover {
-    color: #32228a;
-    cursor: pointer;
-}
-
-.navbar.navbar-default {
-    background-color: #ffffff;
-    opacity: 0.7;
-    box-shadow: 0px 0.3px #ffff;
-}
-
-.navbar-toggler {
-    background-color: grey !important;
-}
-
 .center {
-    text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+  text-align: center;
 }
 
-.section-link-out {
-    margin-top: -1rem;
-
-    width: 100%;
-}
-
-.card-body {
-    background-color: #f4f8fc;
-}
-
-.card {
-    background-color: #f4f8fc;
-    margin-bottom: 2rem;
-}
-
-
-.ul {
-    list-style-type: disc;
-}
-
-
-.section-p {
-    text-align: center;
-    mix-blend-mode: difference !important;
-    -webkit-mix-blend-mode: difference;
-    -moz-mix-blend-mode: difference;
-    color: #afafaf;
-
-}
-
-.bottom-padding {
-    height: 3rem;
-    margin-top: -0.5rem;
-}
-
-footer {
-    padding-bottom: -5rem;
-}
-
-/*projects sections css*/
-.projects-header {
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #32228a;
-}
-
-.work-header {
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: #32228a;
-    margin-top: 4rem;
-}
-
-.projects-header:hover {
-    text-decoration-color: #7164b9;
-}
-
-.work-header:hover {
-    text-decoration-color: #7164b9;
-}
-
-.local-content {
-    margin-block-start: 6rem;
-}
-
-.portfolio-winter-2020-section {
-    margin-top: 3rem;
-}
-
-.grape-section {
-    margin-top: 3rem;
-}
-
-.bc-ferries-section {
-    margin-top: 3rem;
-}
-
-.portfolio-spring-2019 {
-    margin-top: 3rem;
-}
-
-.eb-web-fall-2018 {
-    margin-top: 3rem;
-}
-
-.school-rel-2017-2019 {
-    margin-top: 3rem;
-}
-
-.ffatg-section {
-    margin-top: 3rem;
-}
-
-.hootsuite-section {
-    margin-top: 3rem;
-}
-
-.eccc-section {
-    margin-top: 3rem;
-}
-
-.projects-section-portfolio-winter-2020 {
-    opacity: 1;
-    padding-top: 1rem;
-    width: 100%;
-    background-image: url(./src/assets/portfolio-winter-2020-meta.svg);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-}
-
-.projects-section-grape {
-    opacity: 1;
-    padding-top: 1rem;
-    width: 100%;
-    background-image: url(./src/assets/grape_promo.svg);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-
-}
-
-.projects-section-bc-ferries {
-    opacity: 1;
-    padding-top: 1rem;
-    width: 100%;
-    background-image: url(./src/assets/bc_ferries_preview.svg);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-
-}
-
-@keyframes slide-in-left {
-    from {
-        margin-left: 0rem;
-        opacity: 1;
-    }
-
-    to {
-        margin-left: 0rem;
-        opacity: 1;
-    }
-}
-
-@keyframes slide-in-left-eb {
-    from {
-        margin-left: 0rem;
-        opacity: 0.8;
-    }
-
-    to {
-        margin-left: 0rem;
-        opacity: 0.8;
-    }
-}
-
-@keyframes slide-in-right {
-    from {
-        margin-left: 0rem;
-        opacity: 1;
-    }
-
-    to {
-        margin-left: 0rem;
-        opacity: 1;
-    }
-}
-
-.projects-section-portfolio-winter-2020:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.projects-section-grape:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.projects-section-bc-ferries:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.projects-section-portfolio:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.no-show-sections {
-    display: none;
-}
-
-.projects-section-portfolio {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/landing_page.svg);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 1rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-}
-
-.projects-section-eb-web {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/eb-landing-page.png);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 0.001rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    position: relative;
-}
-
-.projects-section-eb-web:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-    opacity: 1;
-
-}
-
-.projects-section-school-rel {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/isometric\ design\ safe.svg);
-    height: 34rem;
-    background-size: cover;
-    width: 100%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 1rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-}
-
-.projects-section-school-rel:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.work-section-ffatg {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/ffatg-large.png);
-    height: 34rem;
-    background-position: 55% 70%;
-    background-repeat: no-repeat;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 1rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-}
-
-.work-section-ffatg:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.work-section-hootsuite {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/hootsuite-horizontal-black-registered.png);
-    height: 34rem;
-    background-position: 55% 70%;
-    background-repeat: no-repeat;
-    transition: background-color 0.3s ease-in-out;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 1rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-}
-
-.work-section-hootsuite:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.work-section-eccc {
-    opacity: 1;
-    width: 100%;
-    background-image: url(./src/assets/eccc_logorref_3.svg);
-    height: 34rem;
-    background-position: 55% 70%;
-    background-repeat: no-repeat;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 5px 10px rgb(201, 201, 201);
-    padding-top: 1rem;
-    top: 0;
-    transition: top 0.3s ease, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    position: relative;
-}
-
-.work-section-eccc:hover {
-    top: -1rem;
-    box-shadow: 0px 5px 16px #32228a;
-    background-color: rgb(233, 232, 232);
-    cursor: pointer;
-}
-
-.bc-ferries-anim-class {
-    opacity: 1;
-}
-
-@media screen and (max-width: 870px) {
-    .landing-text-sub {
-        top: 18rem;
-    }
-}
-
-@media screen and (max-width: 580px) {
-    .landing-text-sub {
-        display: none;
-    }
-}
-
-.cp {
-    margin-top: 2rem;
-}
-
-.mobile-support-coming {
-    position: fixed;
-    padding-top: 1rem;
-    bottom: 0rem;
-    height: 10rem;
-    width: 100%;
-    background-color: #e4e4e4;
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-@media screen and (max-width:480px) {
-    .mobile-support-coming {
-        height: 12rem;
-    }
-}
-
-@media screen and (max-width:1000px) {
-    .display-4 {
-        font-size: 2rem !important;
-    }
-
-    .display-3 {
-        font-size: 3.5rem !important;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    .display-3 {
-        font-size: 2rem !important;
-    }
-}
-
-@media screen and (max-width:450px) {
-    .display-3 {
-        font-size: 1.5rem !important;
-    }
-}
-
-@media screen and (max-width: 780px) {
-    .center-content {
-        margin-left: 15px !important;
-    }
+body {
+  background: #e5e5e5;
 }
