--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .view-portfolio {
   text-align: center;
-  margin: 20%;
+
   display: block;
   border-radius: 8px;
   background: #3f46f3;
@@ -18,6 +18,29 @@
 }
 .center {
   text-align: center;
+}
+.container {
+  padding-left: 64px;
+  padding-right: 64px;
+}
+
+.v-space-64 {
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+
+.v-space-32 {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.v-space-32 {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.list {
+  padding-inline-start: 16px;
 }
 
 body {
